--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,8 +1,4 @@
-@media only screen and (max-width: 800px){
-    #header{
-        background-image: url(images/cover-portfolio-mobile.png);
-        height: 20vh;
-    }
+@media only screen and (max-width: 1192px){
 
     .infos{
         font-size: 15px;
@@ -27,12 +23,13 @@
         display: block;
         font-size: 25px;
         cursor: pointer;
+        color: aliceblue;
     }
     nav ul{
         background:#01a0b5f6;;
         position: fixed;
         top: 0;
-        right: -200px;
+        right: -300px;
         width: 200px;
         height: 100vh;
         padding-top: 50px;
@@ -60,51 +57,23 @@
         font-size: 20px;
     }
 
-    .row{
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        padding: 10px;
+    .navigation{
+        flex-direction: column;
     }
-    
 
-
-    .sobre-col-2 h1{
-        font-size: 40px;
-    }
 
     .p-sobre {
         font-size: 16px;
-    }
-    
-    .icon{
-        width: 20%;
-        margin-bottom: 1rem;
     }
 
     .col-lg-4>h2{
         font-size: 22px;
     }
-
-
 }
-  
-  @media (min-width: 40em) {
-    /* Bump up size of carousel content */
-    .carousel-caption p {
-      margin-bottom: 1.25rem;
-      font-size: 1.25rem;
-      line-height: 1.4;
+
+@media only screen and (max-width: 990px){
+    .icon{
+        width: 20%;
+        margin-bottom: 1rem;
     }
-  
-    .featurette-heading {
-      font-size: 50px;
-    }
-  }
-  
-  @media (min-width: 62em) {
-    .featurette-heading {
-      margin-top: 7rem;
-    }
-  }
-  
+}
