--- a/css/style.css
+++ b/css/style.css
@@ -23,52 +23,95 @@ body{
     color: rgb(36, 36, 36);
 }
 
-.container-infos{
-    background-color: #01a0b5e0;
-    width: 100%;
-    color: #f1f2f7;
-    text-decoration: none;
-    padding: 0.5em;
+/*--------------fale conosco------------*/
+
+.fale-conosco {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    z-index: 9999;
+    background-color: rgb(1, 160, 181);
+    width: 200px;
+    border-radius: 20px;
+    border: solid rgb(255, 255, 255);
     display: flex;
-    justify-content:flex-end;
-    top: 0;
+    justify-content: space-around;
+    align-items: center;
+
 }
 
-.infos{
-    padding-left:2em;
-    padding-right:10px;
+.fale-conosco p{
+    color: #f1f2f7;
+    margin-top: 14px;
+    font-weight: 600;
 }
 
-.infos>a:link{
-    color:aliceblue;
+p i{
+    margin-right: 12px;
 }
+
+/*--------------animação pulse fale conosco------------*/
+
+.blob{
+    box-shadow: 0 0 0 0 rgba(1, 160, 181, 1);
+	transform: scale(1);
+	animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+	0% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(1, 160, 181, 0.7);
+	}
+
+	70% {
+		transform: scale(1);
+		box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+	}
+
+	100% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+	}
+}
+
+/*--------------header------------*/
 
 .container1{
-    background-color: rgba(240, 248, 255, 0.945);
-    width: 100%;
-    height: 150px;
-    padding: 10px;
-    margin-top: 0px;
+    box-shadow: 1px 1px 10px #00000050;
+    background: #01a0b5;
+    height: 3.5em;
+    justify-content: space-between;
+    padding: 3% 10%;
     position:sticky;
     top: 0;
-    z-index: 1;
+    z-index:9999;
 }
 
-nav{
+.container1, .navigation{
     display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
+}
+
+.navigation {
+    gap: 3em;
+    margin-top: 10px;
 }
 
 .logo{
-    width: 300px;
+    width: 250px;
     padding: 5px;
+}
+
+a{
+    color:#f1f2f7;
+    font-size: 16px;
+    font-weight: 500;
 }
 
 a:hover{
     text-decoration: none;
-    color:#01a0b5;
 }
 
 nav ul li{
@@ -79,7 +122,7 @@ nav ul li{
 }
 
 nav ul li a{
-    color: rgb(19, 19, 19);
+    color: rgb(255, 255, 255);
     text-decoration: none;
     font-size: 18px;
     position: relative;
@@ -91,7 +134,7 @@ nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #01a0b5;
+    background: #ffffff;
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -142,47 +185,49 @@ nav ul li a:hover::after{
     font-size: 20px;
 }
 
-  
+
   /* Center align the text within the three columns below the carousel */
-  .marketing .col-lg-4 {
+.marketing .col-lg-4 {
     margin-bottom: 1.5rem;
     text-align: center;
     font-family: 'Roboto', sans-serif;
-  }
-  .marketing h2 {
+}
+.marketing h2 {
     font-weight: 400;
     font-family: 'Roboto', sans-serif;
-  }
+}
   /* rtl:begin:ignore */
-  .marketing .col-lg-4 p {
+.marketing .col-lg-4 p {
     margin-right: .75rem;
     margin-left: .75rem;
     font-family: 'Roboto', sans-serif;
-  }
-  
-  
-  /* Featurettes
+}
+
+
+/* Featurettes
   ------------------------- */
-  
-  .featurette-divider {
-    margin: 5rem 0; /* Space out the Bootstrap <hr> more */
-  }
-  
+.featurette-divider {
+    margin: 3rem 0; /* Space out the Bootstrap <hr> more */
+}
+
   /* Thin out the marketing headings */
-  .featurette-heading {
+.featurette-heading {
     font-weight: 300;
     line-height: 1;
     /* rtl:remove */
     letter-spacing: -.05rem;
-  }
+}
 
-
+.featurette h1{
+    font-weight: 700;
+}
 
 /*-------------Galeria--------------*/
 
 .titulo{
-    font-weight: 400;
-    font-size:3rem;
+    margin-top: -1em;
+    font-weight: 700;
+    font-size:2.5rem;
     text-align: center;
     margin-bottom: 2rem;
 }
@@ -198,17 +243,57 @@ nav ul li a:hover::after{
 /*--------------Contato------------*/
 
 
-.copyright{
+/*--------------Footer------------*/
+footer{
     width: 100%;
     text-align: center;
     padding: 25px 0;
     background: #01a0b5;
-    font-weight: 300;
     margin-top: 30px;
     color: aliceblue;
 }
 
+.fa-brands{
+    font-size: 1.8em;
+    padding: 1em;
+    text-decoration: none;
+    color: #f1f2f7;
+}
+
+.fa-brands:hover{
+    color: #00424b;;
+}
+
+.contatos{
+    color:#f1f2f7;
+    text-decoration: none;
+    flex-direction: row;
+}
+
+.contatos a{
+    font-size: 16px;
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    justify-content: center;
+    font-size: small;
+}
+
+.contatos a:hover{
+    color: #00424b;;
+}
+
+
+.copyright p{
+    font-size: 16px;
+}
 
 nav .fa-solid{
     display: none;
+}
+
+.fa-solid{
+    font-size: 22px;
+    padding-right: 12px;
+    padding-top: 4px;
 }
