--- a/style.css
+++ b/style.css
@@ -59,7 +59,8 @@ nav{
 }
 
 .logo{
-    width: 200px;
+    /*--------------width: 200px;logos padrao------------*/
+    width: 250px; /*--------------5 anos logo maior------------*/
     margin-top: 20px;
     padding: 5px;
 }
@@ -135,6 +136,19 @@ span{
 }
 
 /*--------------logos clientes------------*/
+
+.titulo-clientes{
+    text-align: center;
+    margin-top: 20px;
+}
+
+.bar-xp{
+    background: var(--blue);
+    height: 5px;
+    width: 40%;
+    margin: auto;
+    margin-bottom: 20px;
+}
 
 #clientes {
     padding-top: 20px;
